--- a/alloggi.html
+++ b/alloggi.html
@@ -280,7 +280,7 @@
       if (!listEl) return;
       listEl.innerHTML = "<p>Caricamento alloggi...</p>";
 
-      const { data, error } = await supabase
+      const { data, error } = await supabaseClient
         .from("properties")
         .select("*, property_photos(path,is_cover,sort_order)")
         .eq("status", "published")
