--- a/fornitore-dashboard.html
+++ b/fornitore-dashboard.html
@@ -145,7 +145,7 @@
         btn.addEventListener("click", async () => {
           const id = btn.dataset.toggle;
           const current = btn.dataset.active === "true";
-          const { error } = await supabase
+          const { error } = await supabaseClient
             .from("extra_services")
             .update({ is_active: !current })
             .eq("id", id)
@@ -163,7 +163,7 @@
     async function loadServices() {
       if (!provider) return;
       servicesEl.innerHTML = "<p>Caricamento servizi...</p>";
-      const { data, error } = await supabase
+      const { data, error } = await supabaseClient
         .from("extra_services")
         .select("id,title,description,category,is_active, extra_service_options(id,is_active)")
         .eq("provider_id", provider.id)
