--- a/ospiti.html
+++ b/ospiti.html
@@ -152,7 +152,7 @@
       if (!listEl) return;
       listEl.innerHTML = "<p>Caricamento alloggi...</p>";
 
-      const { data, error } = await supabase
+      const { data, error } = await supabaseClient
         .from("properties")
         .select("*")
         .eq("status", "published")
